force-app/main/default/objects/Case/fields/SLA_Marked_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Marked_Time__c</fullName>
    <label>SLA Marked Time</label>
    <type>DateTime</type>
</CustomField>