force-app/main/default/objects/Case/listViews/Enterprise_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Enterprise_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Services Support Queue</label>
    <queue>Services_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>