force-app/main/default/objects/Case/listViews/Hardware_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Hardware_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Hardware Support Queue</label>
    <queue>Hardware_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>