force-app/main/default/objects/Case/listViews/Software_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Software_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Software Support Queue</label>
    <queue>Software_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>